--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </nav>
   </header>
   <div class="container mt-3 text-center">
-    <img src="attached_assets/證件照.jpg" alt="Personal Photo" class="img-fluid rounded-circle" style="max-width: 200px; width: 200px; height: 200px; object-fit: cover;">
+    <img src="attached_assets/me2.jpg" style="width: 200px; height: 200px; object-fit: cover;">
+
+
   </div>
 
   <main class="container mt-5">
